<?xml version="1.0"?>
<package>
  <name>path_msgs</name>
  <version>1.8.0</version>
  <description>The carla_msgs package</description>
  <maintainer email="xuec16@mails.tsinghua.edu.cn">Xue Chong</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
  </export>
</package>
